// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c7 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c7.hidden {
  visibility: hidden;
}

.c8 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c9 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c10 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: -webkit-sticky;
  position: sticky;
  top: 40px;
  display: none;
}

.c4 {
  position: absolute;
  padding-left: 20px;
  right: 0;
  z-index: 1;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c9 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c9:first-of-type {
    margin-right: 1.5%;
  }

  .c9:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    display: block;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 19.8333%;
    padding-right: 40px;
  }
}

@media (min-width:1320px) {
  .c4 {
    width: 18.8333%;
    padding-right: 50px;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="css-s123ud"
          >
            <div
              className="css-13byt3y"
            >
              <div
                className="css-13byt3y"
              >
                <div
                  className="css-1482yt8"
                >
                  <a
                    className="css-xm00pa"
                  >
                    <span
                      className="css-pqzzby"
                    />
                  </a>
                  <div
                    className="css-1bq9n3y"
                  >
                    <h3
                      className="css-eqardm"
                    >
                      Puzzles
                    </h3>
                    <button
                      className="css-1x6q5yj"
                    >
                      <svg
                        className="css-3rbz36"
                      >
                        <path />
                        <path />
                      </svg>
                    </button>
                  </div>
                </div>
                <p
                  className="css-4g5gt6"
                >
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Crossword
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Polygon
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
          </div>
        </div>
      </div>
      <article
        className="c5"
      >
        <div>
          <div>
            <div
              className="c6"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c7"
        >
          <h2
            className="c8"
          >
            Sponsored
          </h2>
          <div
            className="c9"
          />
          <div
            className="c9"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-bottom: 20px;
}

.c7 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c7.hidden {
  visibility: hidden;
}

.c8 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c9 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c10 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: -webkit-sticky;
  position: sticky;
  top: 40px;
  display: none;
}

.c4 {
  position: absolute;
  padding-left: 20px;
  right: 0;
  z-index: 1;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c7 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c9 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c9:first-of-type {
    margin-right: 1.5%;
  }

  .c9:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    display: block;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 19.8333%;
    padding-right: 40px;
  }
}

@media (min-width:1320px) {
  .c4 {
    width: 18.8333%;
    padding-right: 50px;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="css-s123ud"
          >
            <div
              className="css-13byt3y"
            >
              <div
                className="css-13byt3y"
              >
                <div
                  className="css-1482yt8"
                >
                  <a
                    className="css-xm00pa"
                  >
                    <span
                      className="css-pqzzby"
                    />
                  </a>
                  <div
                    className="css-1bq9n3y"
                  >
                    <h3
                      className="css-eqardm"
                    >
                      Puzzles
                    </h3>
                    <button
                      className="css-1x6q5yj"
                    >
                      <svg
                        className="css-3rbz36"
                      >
                        <path />
                        <path />
                      </svg>
                    </button>
                  </div>
                </div>
                <p
                  className="css-4g5gt6"
                >
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Crossword
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Polygon
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
          </div>
        </div>
      </div>
      <article
        className="c5"
      >
        <div>
          <div>
            <div
              className="c6"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c7"
        >
          <h2
            className="c8"
          >
            Sponsored
          </h2>
          <div
            className="c9"
          />
          <div
            className="c9"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c7 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c7.hidden {
  visibility: hidden;
}

.c8 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c9 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c10 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: -webkit-sticky;
  position: sticky;
  top: 40px;
  display: none;
}

.c4 {
  position: absolute;
  padding-left: 20px;
  right: 0;
  z-index: 1;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c9 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c9:first-of-type {
    margin-right: 1.5%;
  }

  .c9:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    display: block;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 19.8333%;
    padding-right: 40px;
  }
}

@media (min-width:1320px) {
  .c4 {
    width: 18.8333%;
    padding-right: 50px;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="css-s123ud"
          >
            <div
              className="css-13byt3y"
            >
              <div
                className="css-13byt3y"
              >
                <div
                  className="css-1482yt8"
                >
                  <a
                    className="css-xm00pa"
                  >
                    <span
                      className="css-pqzzby"
                    />
                  </a>
                  <div
                    className="css-1bq9n3y"
                  >
                    <h3
                      className="css-eqardm"
                    >
                      Puzzles
                    </h3>
                    <button
                      className="css-1x6q5yj"
                    >
                      <svg
                        className="css-3rbz36"
                      >
                        <path />
                        <path />
                      </svg>
                    </button>
                  </div>
                </div>
                <p
                  className="css-4g5gt6"
                >
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Crossword
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Polygon
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
          </div>
        </div>
      </div>
      <article
        className="c5"
      >
        <div>
          <div>
            <div
              className="c6"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c7"
        >
          <h2
            className="c8"
          >
            Sponsored
          </h2>
          <div
            className="c9"
          />
          <div
            className="c9"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c7 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c7.hidden {
  visibility: hidden;
}

.c8 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c9 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c10 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: -webkit-sticky;
  position: sticky;
  top: 40px;
  display: none;
}

.c4 {
  position: absolute;
  padding-left: 20px;
  right: 0;
  z-index: 1;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c9 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c9:first-of-type {
    margin-right: 1.5%;
  }

  .c9:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    display: block;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 19.8333%;
    padding-right: 40px;
  }
}

@media (min-width:1320px) {
  .c4 {
    width: 18.8333%;
    padding-right: 50px;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="css-s123ud"
          >
            <div
              className="css-13byt3y"
            >
              <div
                className="css-13byt3y"
              >
                <div
                  className="css-1482yt8"
                >
                  <a
                    className="css-xm00pa"
                  >
                    <span
                      className="css-pqzzby"
                    />
                  </a>
                  <div
                    className="css-1bq9n3y"
                  >
                    <h3
                      className="css-eqardm"
                    >
                      Puzzles
                    </h3>
                    <button
                      className="css-1x6q5yj"
                    >
                      <svg
                        className="css-3rbz36"
                      >
                        <path />
                        <path />
                      </svg>
                    </button>
                  </div>
                </div>
                <p
                  className="css-4g5gt6"
                >
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Crossword
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Polygon
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
            <div
              className="css-y2vd7q"
            >
              <div
                className="css-1kwj960"
              >
                <picture
                  className="css-128l0kk"
                >
                  <div
                    className="css-5pczz7"
                  >
                    <div
                      className="css-1q2lbmy"
                    >
                      <svg
                        className="css-2xpd25-EmotionIconBase ex0cdmw0"
                      >
                        <path />
                        <path />
                      </svg>
                    </div>
                  </div>
                  <img
                    className="css-1kdjcna"
                  />
                </picture>
              </div>
              <a
                className="css-xm00pa"
              >
                <span
                  className="css-pqzzby"
                />
              </a>
              <div
                className="css-btpi9y"
              >
                <p
                  className="css-cj4mhx"
                >
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              className="css-1ft1o8k"
            />
          </div>
        </div>
      </div>
      <article
        className="c5"
      >
        <div>
          <div>
            <div
              className="c6"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c7"
        >
          <h2
            className="c8"
          >
            Sponsored
          </h2>
          <div
            className="c9"
          />
          <div
            className="c9"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
